make some chamges

--- a/index.html
+++ b/index.html
@@ -6,11 +6,9 @@
     <title>Login Page</title>
 </head>
 <body>
-    <hr>
-    <header>
+    <form>
+        <hr>
         <h2><small><u>Fill the following details</u></small></h2>
-    </header>
-    <main>
         <label>
             <input type="text" placeholder="Username">
         </label>
@@ -24,12 +22,10 @@
         <label>
             <input type="submit" placeholder="submit">
         </label> 
-    </main>
-    <footer>
         <pre>
         <h4><small><u>Forget Password?</u>   <u>Try another way</u></small></h4>
         </pre>
-    </footer>
-    <hr>
+        <hr>
+    </form>
 </body>
 </html>
